--- a/Todo.Data/Todo.Data.csproj
+++ b/Todo.Data/Todo.Data.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Todo.Core\Todo.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
