Implement JWT authentication and user management
Updated the project to include JWT authentication by adding necessary package references in `Todo.Service.csproj` and `TodoApi.csproj`. Created new interfaces and classes for user authentication, including `IUserRepository`, `UserRepository`, `IAuthService`, `AuthService`, `LoginRequestDto`, and `LoginResponseDto`.

Modified `Program.cs` to configure JWT authentication and updated `appsettings.json` with JWT settings. Added `AuthController` to handle login requests and generate JWT tokens. These changes enhance application security through token-based authentication.

--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "N8vC4@a!f92!h#jklP5wE3mXQzRt9uY2",
+    "Issuer": "TodoApi",
+    "Audience": "TodoApiUsers"
+  }
 }
