--- a/TodoApi/Properties/launchSettings.json
+++ b/TodoApi/Properties/launchSettings.json
@@ -14,6 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "Scalar",
       "applicationUrl": "https://localhost:7029;http://localhost:5109",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
